--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.admin.rozgaszaczintencji.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/sendBroadcast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Rozgłoś"
+        android:layout_centerHorizontal="true"
+        android:paddingHorizontal="50sp"
+        android:layout_below="@+id/textToBroadcast"/>
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/textToBroadcast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="false"
+        android:layout_marginTop="220sp"
+        android:layout_marginBottom="30sp"
+        android:inputType="text"
+        android:text="Lubię poniedziałki." />
+</RelativeLayout>
